# HyperLPR

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  HyperLPRLite.py  HyperLprGUI.py  README.md  README_CH.md  WebAPI.py  batch.py  benchmark.py  config.json  demo.py  docker-compose.yml  requirements.txt  simpleWebAPI.py  upload.py  wxpy_uploader.py
Prj-Android/: .gitignore  README.md  README_CH.md  build.gradle  settings.gradle
Prj-Android/app/: .gitignore  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  proguard-rules.pro
Prj-Android/app/release/: output-metadata.json
Prj-Android/app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  javaWarpper.cpp
Prj-Android/app/src/main/cpp/include/: FastDeskew.h  Pipeline.h  PlateDetection.h  PlateInfo.h  PlateSegmentation.h  Recognizer.h  SegmentationFreeRecognizer.h
Prj-Android/app/src/main/cpp/opencv342/sdk/native/jni/: OpenCV-armeabi-v7a.mk  OpenCV.mk  OpenCVConfig.cmake
Prj-Android/app/src/main/cpp/opencv342/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Prj-Android/app/src/main/cpp/opencv342/sdk/native/jni/include/opencv2/: cvconfig.h
Prj-Android/app/src/main/cpp/src/: FastDeskew.cpp  FineMapping.cpp  Pipeline.cpp  PlateDetection.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
Prj-Android/hyperlpr3/: build.gradle
Prj-Android/openCVLibrary342/: .gitignore  build.gradle
Prj-IOS/lp/: AppDelegate.h  AppDelegate.m  UIImageCVMatConverter.h  UIImageCVMatConverter.mm  ViewController.h  ViewController.mm  main.m
Prj-IOS/lp.xcodeproj/: project.pbxproj
Prj-IOS/lp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Prj-IOS/lp/Base.lproj/: Main.storyboard
Prj-IOS/src/: FastDeskew.cpp  PlateSegmentation.cpp
Prj-Linux/: .gitignore  CMakeLists.txt  build.sh  hyperlpr3  plate_rec_demo.cpp
Prj-Linux/hyperlpr/: CMakeLists.txt
Prj-Linux/hyperlpr/demos/: test_fastdeskew.cpp  test_finemapping.cpp  test_pipeline.cpp
Prj-Linux/hyperlpr/include/: CNNRecognizer.h  Pipeline.h  Recognizer.h  niBlackThreshold.h
Prj-Linux/hyperlpr/src/: FineMapping.cpp  Pipeline.cpp  util.h
Prj-Linux/lpr/: CMakeLists.txt  TRST_PIPLINE
Prj-Linux/lpr/include/: CNNRecognizer.h  FineMapping.h  Finetune.h  Pipeline.h  PlateDetection.h  PlateInfo.h  PlateRecognation.h  PlateSegmentation.h  Platedetect.h  Recognizer.h  niBlackThreshold.h
Prj-Linux/lpr/model/: README.md  SegmentationFree.prototxt  cascade_double.xml  mininet_ssd_v1.prototxt  refinenet.prototxt
Prj-Linux/lpr/src/: FastDeskew.cpp  FineMapping.cpp  Pipeline.cpp  PlateDetection.cpp  PlateRecognation.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp
Prj-Linux/lpr/tests/: testPipeLine.cpp  test_batch.cpp  test_detection.cpp  test_fastdeskew.cpp  test_pipeline.cpp  test_recognization.cpp  test_segmentation.cpp  test_segmentationFree.cpp
Prj-PHP/: CMakeLists.txt  README.MD  main.cpp  platescan.ini
Prj-PHP/include/: Pipeline.h
Prj-PHP/lpr/: CNNRecognizer.cpp  FastDeskew.cpp  Pipeline.cpp  PlateDetection.cpp  PlateSegmentation.cpp  SegmentationFreeRecognizer.cpp  util.h
Prj-PHP/tests/: platescan.php
Prj-PHP/tests/model/: CharacterRecognization.caffemodel  HorizonalFinemapping.caffemodel  HorizonalFinemapping.prototxt  README.md  Segmentation.caffemodel  Segmentation.prototxt  cascade.xml
Prj-Python/: .gitignore  demo.py  fast_test.py  requirements.txt  setup.py
Prj-Python/hyperlpr3/: __init__.py  helper.py  hyperlpr3.py
Prj-Python/hyperlpr3/algo/: pallet.py  pipeline.py
Prj-Python/hyperlpr3/command/: aliased_group.py  cli.py  sample.py  serve.py
Prj-Python/hyperlpr3/common/: mnn_adapt.py  tokenize.py  tools_process.py  typedef.py
Prj-Python/hyperlpr3/config/: configuration.py  settings.py
Prj-Python/hyperlpr3/inference/: classification.py  detect.py  (+4 more)
Prj-Python/utils/: visual_tools.py
Prj-ROS/: README.md
Prj-ROS/src/hyperlpr/: CMakeLists.txt  package.xml
Prj-ROS/src/hyperlpr/include/: FastDeskew.h  FineMapping.h  Pipeline.h  PlateDetection.h  PlateInfo.h  PlateSegmentation.h  SegmentationFreeRecognizer.h  hyperlpr_node.h  niBlackThreshold.h
Prj-ROS/src/hyperlpr/launch/: bringup.launch  hyperlpr.rviz
Prj-ROS/src/hyperlpr/model/: cascade.xml
Prj-ROS/src/hyperlpr/src/: CNNRecognizer.cpp  FastDeskew.cpp  Pipeline.cpp  PlateDetection.cpp  PlateSegmentation.cpp  Recognizer.cpp  SegmentationFreeRecognizer.cpp  hyperlpr_node.cpp  main.cpp  util.h
Prj-Win/: Prj-Win.sln
Prj-Win/Prj-Win/: Prj-Win.vcxproj  Prj-Win.vcxproj.filters
Prj-iOS/: Podfile  README.md
Prj-iOS/hyperlpr3/: .gitignore
Prj-iOS/lpr/: .gitignore  AppDelegate.m  CameraViewController.h  RootViewController.h  Utility.h  Utility.mm  main.m
command/: build_aarch64.sh  build_arm7.sh  build_release_android_share.sh  build_release_linux_share.sh  configuration_ios.sh
cpp/c_api/: hyper_lpr_sdk.cc  hyper_lpr_sdk.h  hyper_lpr_sdk_internal.h
cpp/samples/: sample_capi.cpp  sample_capi_detect.cpp  sample_context.cpp  sample_split_model.cpp
cpp/src/: basic_types.h  configuration.h  doc.h  log.h  utils.h  version.h  version.h.in
cpp/test/: test_main.cpp  test_settings.cpp  test_settings.h
cpp_ implementation/lpr/: CMakeLists.txt
hyperlpr/: cache.py  colourDetection.py  config.py  deskew.py  detect.py  e2e.py  e2emodel.py  finemapping.py  finemapping_vertical.py  niblack_thresholding.py  pipline.py  recognizer.py  segmentation.py  typeDistinguish.py
hyperlpr_pip_pkg/: demo.py  setup.py
hyperlpr_pip_pkg/hyperlpr/: __init__.py  hyperlpr.py  table_chs.py
hyperlpr_py3/: cache.py  colourDetection.py  config.py  deskew.py  detect.py  e2e.py  e2emodel.py  finemapping.py  finemapping_vertical.py  pipline.py  recognizer.py  requirements.txt  segmentation.py  typeDistinguish.py
hyperlpr_test/: color_detection.py  detect_test.py
model/: cascadelbp.xml  char_judgement.h5  char_judgement1.h5  model12.h5  plate_type.h5
templates/: upload.html
(+281 files in other folders)
